# cargo-new-release

./: Cargo.toml
src/: lib.rs  main.rs
