[package]
name = "cargo-new-release"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.37"
base64 = "0.13.0"
dialoguer = "0.9.0"
regex = "1.4.2"
semver = "0.11.0"
serde_json = "1.0.78"
time = "0.2.23"
ureq = { version = "2.4.0", features = ["json"] }
